# finetuning-guide

./: .gitignore  README.md  pyproject.toml
data/: sample_dataset.jsonl
notebooks/: finetuning_guide.ipynb
src/ftguide/: __init__.py  cli.py  config.py  data.py  eval.py  inference.py  trainer.py
